# NSS

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  DartConfiguration.tcl  NSS.sln  README.md  SQL_header.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  release.cpp
NSS/: CMakeLists.txt
NSS/NSS/: CMakeLists.txt
NSS/NSS/.cpp/: NSS.cpp
NSS/NSS/common/: clients.cpp  clients.h  order.h  product.cpp  product.h
NSS/NSS/namespace/: functions.cpp
NSS/NSS/socket/: socket.cpp
ProgramFiles/: CMakeLists.txt  NSS.vcxproj  NSS.vcxproj.filters  NSS_Server.vcxproj  NSS_Server.vcxproj.filters
ProgramFiles/NSS.dir/Debug/: vc143.idb
ProgramFiles/NSS.dir/Debug/NSS.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
ProgramFiles/NSS/include/: clients.h  order.h  order_pickup_point.h  product.h
ProgramFiles/NSS/namespace/: functions.cpp  functionsOppControl.cpp
ProgramFiles/NSS/server/: SQL_header.cpp  SQL_header.h  release.cpp  sql_db.sql  sql_script.sql  test_sql_script.sql
ProgramFiles/NSS/socket/: socket.cpp
ProgramFiles/NSS/src/: NSS.cpp  NSS_server.cpp  client_server.cpp  clients.cpp  order.cpp  order_pickip_point.cpp  product.cpp  sql_script.sql
ProgramFiles/NSS/tests/: test_OPP.cpp  test_client.cpp  test_database.cpp  test_file.cpp  test_order.cpp  test_product.cpp
ProgramFiles/NSS_Server.dir/Debug/: vc143.idb
ProgramFiles/NSS_Server.dir/Debug/NSS_Server.tlog/: CL.command.1.tlog  NSS_Server.lastbuildstate
Rabota/: CMakeLists.txt
Rabota/NSS/.cpp/: NSS.cpp
Rabota/NSS/common/: PVZ.cpp  PVZ.h  clients.cpp  clients.h  order.cpp  order.h  product.cpp  product.h
tests/:  test_orderPickupPoint.cpp  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  DartConfiguration.tcl  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  test_order.cpp  test_order.vcxproj  test_order.vcxproj.filters  tests.sln
tests/Testing/Temporary/: CTestCostData.txt
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
